# learn-deer-flow

./: .gitignore  AGENTS.md  README.md
P01-the-loop/: README.md
P01-the-loop/backend/: config.example.yaml  langgraph.json  pyproject.toml
P02-tool-dispatch/: README.md
P02-tool-dispatch/backend/: config.example.yaml  langgraph.json  pyproject.toml
docs/mini-deerflow/: P00-roadmap.md  P01-the-loop.md  P02-tool-dispatch.md  P03-thread-state.md  P04-middleware.md  P05-planning.md  P06-skills.md  P07-context-compact.md  P08-sandbox.md  P09-subagents.md  P10-runtime-services.md  P11-product-shell.md  README.md
docs/mini-deerflow/manual/: middleware-system.md  overview.md  research-agent-overview.md  sandbox-system.md  thread-state-system.md  tool-system.md
docs/mini-deerflow/plans/: 2026-04-05-p01-the-loop-implementation.md  2026-04-06-p02-tool-dispatch-implementation.md
docs/mini-deerflow/spec/: 2026-04-06-p02-tool-dispatch-spec.md
tests/fixtures/: p01-config.yaml  p02-config.yaml  p02-invalid-group.yaml  p02-missing-tool-use.yaml
tests/p01_the_loop/: support.py  test_all.py  test_example_config.py  test_layout.py  test_lead_agent.py  test_model_factory.py  test_readme.py
tests/p02_tool_dispatch/: __init__.py  support.py  test_example_config.py  test_layout.py  test_lead_agent.py  test_readme.py  test_tool_config.py  test_tool_registry.py
